feat: added wallet account management to the user
